--- a/src/views/anime/episode-detail-mobile.ejs
+++ b/src/views/anime/episode-detail-mobile.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="bg-gray-100">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/public/css/anime-list.css">
     <link rel="stylesheet" href="/src/public/css/main-color/color.css">
+    <link rel="stylesheet" href="/src/public/css/extra/anime-list-mobile-animated.css">
     <link rel="stylesheet" href="/src/public/css/badges.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -35,84 +36,126 @@
             height: 100%;
             border: none;
         }
+
+        :root {
+            --primary-color: #ff6b6b;
+        }
+        body {
+            font-family: 'Poppins', sans-serif;
+        }
+        .bg-primary {
+            background-color: var(--primary-color);
+        }
+        .text-primary {
+            color: var(--primary-color);
+        }
+        .border-primary {
+            border-color: var(--primary-color);
+        }
+        .hover\:bg-primary:hover {
+            background-color: var(--primary-color);
+        }
+        .hover\:text-primary:hover {
+            color: var(--primary-color);
+        }
     </style>
 </head>
 <body class="bg-white dark:bg-white text-black dark:text-black transition-colors duration-300">
+
+    <!-- Navbar -->
     <nav class="bg-white shadow-md">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-          <div class="flex justify-between h-16">
-            <div class="flex items-center">
-              <div class="flex-shrink-0 flex items-center">
-                <a href="/" class="flex flex-col items-center">
-                  <span class="text-4xl font-bold text-primary">NakamaStream</span>
-                  <span class="text-primary text-xs mt-0.5" style="line-height: 1;">By NakamaGroup</span>
+        <div class="max-w-full mx-auto px-4">
+            <div class="flex justify-between items-center h-16">
+                <!-- Logo -->
+                <a href="/" class="flex flex-col items-center group">
+                    <span class="text-2xl md:text-3xl font-bold text-primary group-hover:text-orange-500 transition duration-300">
+                        NakamaStream
+                    </span>
+                    <span class="text-primary text-xs mt-0.5 group-hover:text-gray-600 transition duration-300">
+                        By: NakamaGroup
+                    </span>
                 </a>
-              </div>
-              <div class="md:flex ml-6 space-x-8">
-                <a href="/" class="border-orange-500 text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-                  Inicio
-                </a>
-                <a href="/news" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-                  Noticias
-                </a>
-                <a href="/soon" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-                  Calendario
-                </a>
-              </div>
-            </div>
-            <div class="flex items-center">
-              <div class="relative md:block">
-              </div>
-              <a href="/animes/api/saved-animes" class="ml-3">
-                <button class="bg-white p-2 rounded-full text-gray-400 hover:text-primary hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500 transition duration-150 ease-in-out">
-                  <span class="sr-only">Ver marcadores</span>
-                  <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z" />
-                  </svg>  
+                <!-- Mobile Menu Button -->
+                <button id="mobile-menu-toggle" class="md:hidden p-2 text-gray-600 focus:outline-none hover:text-primary transition duration-300">
+                    <i id="mobile-menu-icon" class="fas fa-bars transition-transform duration-500"></i>
                 </button>
-              </a>                                    
-              <div class="ml-3 relative">
-                <button id="user-menu-button" class="bg-white rounded-full flex text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500" aria-haspopup="true" aria-expanded="true">
-                  <span class="sr-only">Abrir menú de usuario</span>
-                  <img src="<%= user.profile_image_url || 'https://avatars.githubusercontent.com/u/168317328?s=200&v=4' %>" alt="User Avatar" class="h-8 w-8 rounded-full">
-                </button>
-              
-                <!-- Menú desplegable -->
-                <div id="user-menu" class="absolute right-0 z-10 mt-2 w-48 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 hidden transition-all duration-200 transform opacity-0 scale-95" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button">
-                  <div class="py-1" role="none">
-                    <p class="block px-4 py-2 text-sm text-gray-700"><%= user.username %></p>
-                    <div class="border-b border-gray-200"></div>
-                    <a href="/profile" class="user-menu-link flex items-center px-4 py-2 text-sm text-gray-700" role="menuitem">
-                      <i class="fas fa-user mr-2"></i> Perfil
-                    </a>
-                    <a href="/animes/api/saved-animes" class="user-menu-link flex items-center px-4 py-2 text-sm text-gray-700" role="menuitem">
-                      <i class="fa-solid fa-bookmark mr-2"></i> Guardados
-                    </a>
-                    <a href="/profile" class="user-menu-link flex items-center px-4 py-2 text-sm text-gray-700" role="menuitem">
-                      <i class="fa-solid fa-star mr-2"></i> Favoritos
-                    </a>
-                    <% if (isAdmin) { %>
-                      <div class="border-t mt-2"></div> <!-- Separador opcional -->
-                      <a href="/admin/panel" class="user-menu-link flex items-center px-4 py-2 text-sm text-gray-700" role="menuitem">
-                        <i class="fa-solid fa-lock mr-2"></i> Panel de Admin
-                      </a>
-                      <a href="/anime/upload" class="user-menu-link flex items-center px-4 py-2 text-sm text-gray-700" role="menuitem">
-                        <i class="fa-solid fa-upload mr-2"></i> Subir Anime
-                      </a>
-                      <a href="/admin/animes/featured" class="user-menu-link flex items-center px-4 py-2 text-sm text-gray-700" role="menuitem">
-                        <i class="fa-solid fa-star mr-2"></i> Subir Anime Destacado
-                      </a>
-                    <% } %>
-                    <a href="/logout" class="user-menu-link flex items-center px-4 py-2 text-sm text-gray-700" role="menuitem">
-                      <i class="fas fa-sign-out-alt mr-2"></i> Cerrar sesión
-                    </a>                    
-                  </div>
+                <!-- Desktop Menu -->
+                <div class="hidden md:flex space-x-4">
+                    <a href="/" class="border-b-2 border-orange-500 text-gray-900 text-sm font-medium transition duration-300 hover:scale-110 hover:text-orange-500">Inicio</a>
+                    <a href="/news" class="border-b-2 border-transparent text-gray-500 hover:border-orange-500 hover:text-orange-500 text-sm font-medium transition duration-300 hover:scale-110">Noticias</a>
+                    <a href="/animes/api/saved-animes" class="border-b-2 border-transparent text-gray-500 hover:border-orange-500 hover:text-orange-500 text-sm font-medium transition duration-300 hover:scale-110">Guardados</a>
+
+                    <!-- User Menu -->
+                    <div class="relative group">
+                        <button id="user-menu-toggle" class="flex items-center text-gray-600 focus:outline-none hover:text-primary transition duration-300">
+                            <img src="<%= user.profile_image_url || 'https://avatars.githubusercontent.com/u/168317328?s=200&v=4' %>" alt="User Avatar" class="w-8 h-8 rounded-full mr-2 hover:scale-110 transition-transform duration-300">
+                            <span class="text-sm font-medium group-hover:text-orange-500 transition duration-300"><%= user.username %></span>
+                            <i id="user-menu-arrow" class="fas fa-chevron-down ml-1 transition-transform duration-500 group-hover:rotate-180"></i>
+                        </button>
+                        <div id="user-menu" class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md transition-all duration-500 transform scale-95 origin-top-right group-hover:scale-100 group-hover:opacity-100 opacity-0">
+                            <a href="/perfil" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Perfil</a>
+                            <a href="/animes/api/saved-animes" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Guardados</a>
+                            <a href="/profile" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Favoritos</a>
+                            <% if (isAdmin) { %> <!-- Verificación de admin -->
+                                <div class="border-t mt-2"></div> <!-- Separador opcional -->
+                                <a href="/admin/panel" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Admin Panel</a>
+                                <a href="/anime/upload" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Subir Anime</a>
+                                <a href="/admin/animes/featured" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Subir Anime Destacado</a>
+                            <% } %>
+                            <a href="/logout" class="block px-4 py-2 text-red-600 hover:bg-red-200 hover:pl-5 transition-all duration-300">Cerrar Sesión</a>
+                        </div>
+                    </div>
                 </div>
-              </div>                          
             </div>
-          </div>
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="hidden md:hidden bg-white shadow-lg transition-all duration-500 transform scale-95 origin-top">
+                <a href="/" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
+                    <i class="fas fa-home mr-2"></i> Inicio
+                </a>
+                <a href="/news" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
+                    <i class="fa-solid fa-newspaper mr-2"></i> Noticias
+                </a>
+                <a href="/soon" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
+                    <i class="fa-solid fa-calendar mr-2"></i> Calendario
+                </a>
+
+                <!-- User Menu in Mobile -->
+                <div class="relative">
+                    <button id="user-menu-toggle-mobile" class="flex items-center w-full text-left px-4 py-2 text-gray-600 focus:outline-none hover:text-orange-500 transition duration-300">
+                        <img src="<%= user.profile_image_url || 'https://avatars.githubusercontent.com/u/168317328?s=200&v=4' %>" alt="User Avatar" class="w-8 h-8 rounded-full mr-2 hover:scale-110 transition duration-300">
+                        <span class="text-sm font-medium"><%= user.username %></span>
+                        <i id="user-menu-arrow-mobile" class="fas fa-chevron-down ml-1 transition-transform duration-500 hover:rotate-180"></i>
+                    </button>
+                    <div id="user-menu-mobile" class="hidden bg-white shadow-lg rounded-md transition-all duration-500 transform scale-95 origin-top">
+                        <a href="/profile" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
+                            <i class="fas fa-user mr-2"></i> Perfil
+                        </a>
+                        <a href="/animes/api/saved-animes" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
+                            <i class="fa-solid fa-bookmark mr-2"></i> Guardados
+                        </a>
+                        <a href="/profile" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
+                            <i class="fa-solid fa-star mr-2"></i> Favoritos
+                        </a>
+                        <% if (isAdmin) { %> <!-- Verificación de admin -->
+                        <div class="border-t mt-2"></div> <!-- Separador opcional -->
+                        <a href="/admin/panel" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
+                            <i class="fa-solid fa-lock mr-2"></i> Panel de Admin
+                        </a>
+                        <a href="/anime/upload" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
+                            <i class="fa-solid fa-upload mr-2"></i> Subir Anime
+                        </a>
+                        <a href="/admin/animes/featured" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
+                            <i class="fa-solid fa-star mr-2"></i> Subir Anime Destacado
+                        </a>
+                        <% } %>
+                        <a href="/logout" class="block px-4 py-2 text-red-600 hover:bg-red-200 transition duration-300 hover:pl-5">
+                            <i class="fas fa-sign-out-alt mr-2"></i> Cerrar Sesión
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </nav>
+    </nav>
 
     <main class="container mx-auto px-4 py-8 flex flex-col md:flex-row">
         <aside class="w-full md:w-1/4 pr-4 mb-8 md:mb-0">
@@ -192,6 +235,7 @@
     </div>
 
     <script src="/src/public/js/anime/profile-anime-menu.js"></script>
+    <script src="/src/public/js/anime/NavMobile-universal.js"></script>
     <script>
     document.addEventListener("DOMContentLoaded", function() {
         const commentForm = document.getElementById("comment-form");
