--- a/src/views/start/jobs.ejs
+++ b/src/views/start/jobs.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NakamaStream - Trabaja con Nosotros</title>
+    <title>NakamaStream - Colabora con Nosotros</title>
+    <link rel="shortcut icon" href="/src/public/favicons/favicon-16x16.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
@@ -101,10 +102,15 @@
             <div class="container mx-auto px-4 sm:px-6 lg:px-8">
                 <h2 class="text-4xl text-primary font-bold text-center mb-12">Nuestros Colaboradores</h2>
                 <div class="flex justify-center">
-                    <img src="https://i.ibb.co/LrjX6Zm/Map-Chart-Map.png" alt="Mapa de nuestros trabajadores" class="rounded-lg shadow-md">
-                </div>                
-                
-                <!-- Sección de trabajadores -->
+                    <img src="https://iili.io/23KxtwJ.png" alt="Mapa de nuestros trabajadores" class="rounded-lg shadow-md">
+                </div> 
+
+                <br>
+                <br>
+
+                <h2 class="text-4xl text-primary font-bold text-center mb-12">Colaboradores en Discord</h2>
+
+                <!-- Sección de Colaboradores en discord -->
                 <div class="mt-12 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
                     <!-- Tarjeta de un trabajador -->
                     <div class="bg-white rounded-lg shadow-lg p-6">
@@ -118,7 +124,7 @@
                     <!-- Tarjetas duplicadas y modificadas -->
                     <div class="bg-white rounded-lg shadow-lg p-6">
                         <img src="https://cdn.discordapp.com/banners/984475795743453195/a_99a057c5885b2e6aba166112dd937487?size=4096" alt="Banner Avidevs" class="rounded-t-lg h-24 w-full object-cover mb-4">
-                        <img src="https://cdn.discordapp.com/avatars/984475795743453195/068452944bf3991f6af7d226a38b727c?size=1024" alt="Avidevs" class="rounded-full h-24 w-24 mx-auto mb-4">
+                        <img src="https://cdn.discordapp.com/avatars/984475795743453195/a_894f3646b89af9fd6058ae72498fba29.gif" alt="Avidevs" class="rounded-full h-24 w-24 mx-auto mb-4">
                         <h3 class="text-xl font-semibold">Avidevs</h3>
                         <p class="text-gray-600">País: <span class="font-medium">República Dominicana</span></p>
                         <p class="text-gray-600">Puesto: <span class="font-medium">Fundador / Developer</span></p>
@@ -133,8 +139,8 @@
                     </div>
                 
                     <div class="bg-white rounded-lg shadow-lg p-6">
-                        <img src="https://cdn.discordapp.com/banners/852303643235450880/a_da384652678354c4f8ae355abc1d726d?size=4096" alt="Banner Matmtwt" class="rounded-t-lg h-24 w-full object-cover mb-4">
-                        <img src="https://cdn.discordapp.com/avatars/852303643235450880/a_31a59b3531a96c34c96dc612d03cd3b5?size=1024" alt="Matmtwt" class="rounded-full h-24 w-24 mx-auto mb-4">
+                        <img src="https://cdn.discordapp.com/banners/852303643235450880/a_5221888eba5c756b7d0fa8e45a6ef991?size=4096" alt="Banner Matmtwt" class="rounded-t-lg h-24 w-full object-cover mb-4">
+                        <img src="https://cdn.discordapp.com/avatars/852303643235450880/ebd8e686f77a5aaef8a94d62ad76c1a0?size=1024" alt="Matmtwt" class="rounded-full h-24 w-24 mx-auto mb-4">
                         <h3 class="text-xl font-semibold">Matmtwt</h3>
                         <p class="text-gray-600">País: <span class="font-medium">Ecuador</span></p>
                         <p class="text-gray-600">Puesto: <span class="font-medium">Administrador</span></p>
@@ -147,9 +153,41 @@
                         <p class="text-gray-600">País: <span class="font-medium">República Dominicana</span></p>
                         <p class="text-gray-600">Puesto: <span class="font-medium">Administrador / Beta tester</span></p>
                     </div>
+
+                    <div class="bg-white rounded-lg shadow-lg p-6">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRs3HAcuu_SqzkP2cyw1C27soFwm4PxHVw0eg&s" alt="Banner jc_0007" class="rounded-t-lg h-24 w-full object-cover mb-4">
+                        <img src="https://cdn.discordapp.com/avatars/997845675142295552/592d7a0ea47b8e8f3118c355eadc712a?size=1024" alt="jc_0007" class="rounded-full h-24 w-24 mx-auto mb-4">
+                        <h3 class="text-xl font-semibold">dani_adbg</h3>
+                        <p class="text-gray-600">País: <span class="font-medium">Ecuador</span></p>
+                        <p class="text-gray-600">Puesto: <span class="font-medium">Administrador</span></p>
+                    </div>
                     
                     <!-- Agrega más tarjetas según sea necesario -->
-                </div>                                               
+                </div>   
+                
+                <br>
+                <br>
+
+                <h2 class="text-4xl text-primary font-bold text-center mb-12">Colaboradores en Github</h2>
+                
+                <!-- Sección de Colaboradores en github -->
+                <div class="mt-12 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
+                    <!-- Tarjeta de un trabajador -->
+                    <div class="bg-white rounded-lg shadow-lg p-6">
+                        <img src="https://avatars.githubusercontent.com/u/184460358?v=4" alt="AssDevCl" class="rounded-full h-24 w-24 mx-auto mb-4">
+                        <h3 class="text-xl font-semibold">AssDevCl</h3>
+                        <p class="text-gray-600">País: <span class="font-medium">Estados Unidos</span></p>
+                        <p class="text-gray-600">Puesto: <span class="font-medium">Colaborador</span></p>
+                        <br>
+                        <p class="text-gray-600">Contribuciones: <span class="font-medium">Nos ayudo a resolver algunos bugs en el proyecto y repositorio</span></p>
+
+                        <div class="mt-4 p-2 bg-yellow-100 text-yellow-700 text-sm rounded">
+                            <p>Nota: Toda la información mostrada fue obtenida del perfil público del usuario.</p>
+                        </div>
+                    </div>
+                    
+                    <!-- Agrega más tarjetas según sea necesario -->
+                </div>
             </div>
         </section>        
     </main>
