--- a/src/views/users/user-profile.ejs
+++ b/src/views/users/user-profile.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil de <%= user.username %> - NakamaStream</title>
+    <link rel="shortcut icon" href="/src/public/favicons/favicon-16x16.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script>
@@ -62,7 +63,7 @@
             </div>
             <div class="px-4 py-16 text-center">
                 <h1 class="text-4xl font-bold text-gray-800 dark:text-white"><%= user.username %></h1>
-                <p class="text-gray-600 dark:text-gray-400"><%= user.email %></p>
+                <p class="text-gray-600 dark:text-gray-400"><%= isOwnProfile ? user.email : (user.email.substring(0, 2) + '****@' + user.email.split('@')[1]) %></p>
                 <p class="mt-4 text-gray-700 dark:text-gray-300"><%= user.bio || 'No bio available' %></p>
                 <div class="mt-6 flex justify-center space-x-4">
                     <div class="text-center">
